--- a/README
+++ b/README
@@ -2,15 +2,16 @@
 
 大学即将毕业了，总想着给即将逝去的大学时光留下点什么，然后就做了这个
 
+
 工程基于开源项目zlevoclint进行二次开发。
 
 
-Another iBcker. 
+Another
 
 项目主页： https://github.com/iBcker/ALevoClient
-weibo:	 http:weibo.com/bcker
+微博:	 http://weibo.com/bcker
 GMail:   happymiyu@gmail.com
 
-20013-05-11 于吉林大学珠海学院
+20013-05-11 于吉林大学珠海学院 by @iBcker
 
 再次感谢zlevoclint的作者，他的工程给了我很大帮助。
