--- a/README
+++ b/README
@@ -8,6 +8,7 @@
 
 Another
 
+app包：  https://raw.github.com/iBcker/ALevoClient/master/products/ALevoClient.app 
 项目主页： https://github.com/iBcker/ALevoClient
 微博:	 http://weibo.com/bcker
 GMail:   happymiyu@gmail.com
