--- a/README
+++ b/README
@@ -8,7 +8,7 @@
 
 Another
 
-app包：  https://raw.github.com/iBcker/ALevoClient/master/products/ALevoClient.zip 
+app包：  https://raw.github.com/iBcker/ALevoClient/master/products/ALevoClient.app.zip 
 项目主页： https://github.com/iBcker/ALevoClient
 微博:	 http://weibo.com/bcker
 GMail:   happymiyu@gmail.com
