--- a/README
+++ b/README
@@ -13,6 +13,4 @@ app包：  https://raw.github.com/iBcker/ALevoClient/master/products/ALevoClient
 微博:	 http://weibo.com/bcker
 GMail:   happymiyu@gmail.com
 
-20013-05-11 于吉林大学珠海学院 by @iBcker
-
-再次感谢zlevoclint的作者，他的工程给了我很大帮助。
+20013-05-11 吉林大学·珠海学院 by @iBcker
